# autogen-rfp-poc

./: .gitignore  pyproject.toml  streamlit_app.py
alembic/: env.py
alembic/versions/: 03ca8718a857_init.py
src/app/: main.py
src/app/core/: config.py  llm.py  llm_tracker.py  utils.py
src/app/database/: __init__.py
src/app/database/models/: __init__.py  app_limit.py  folder.py  user.py  web_search_history.py
src/app/examples/: basic.py  concurrent.py  group_chat.py  handoffs.py  llm.py  mixture.py  two_people.py
src/app/rfp/: main.py  utils.py
src/app/rfp/agents/: extractor.py  manager.py  parser.py  section_generator.py
src/app/rfp/schemas/: pdf_parser.py
src/app/rfp/services/: file.py  pdf.py  s3.py  tavily.py  weaviate.py
