[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vaibhav Jain <vaibhav@aiplanet.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
autogen-core = "^0.4.9.3"
autogen-ext = {extras = ["ollama"], version = "^0.4.9.3"}
instructor = "^1.7.8"
openai = "^1.70.0"
aioboto3 = "^14.1.0"
langchain-core = "^0.3.50"
weaviate-client = "^4.12.0"
tavily-python = "^0.5.4"
sqlalchemy = "^2.0.40"
psycopg = {extras = ["binary", "pool"], version = "^3.2.6"}
alembic = "^1.15.2"
langchain-community = "^0.3.20"
langchain-experimental = "^0.3.4"
pypdf = "^5.4.0"

[tool.poetry.scripts]
start = "app.main:main"

[tool.poetry.group.dev.dependencies]
autogenstudio = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
